--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
+      manifest.json предоставляет метаданные, которые используются, когда ваше веб-приложение установлено
+      на мобильном устройстве или компьютере пользователя.
+      руководство https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
+        Обратите внимание на использование %PUBLIC_URL% в приведенных выше тегах.
+        Он будет заменен URL-адресом общедоступной папки во время сборки.
+        Только файлы внутри «общедоступной» папки могут быть доступны из HTML.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+        В отличие от «/favicon.ico» или «favicon.ico», «%PUBLIC_URL%/favicon.ico» будет
+        корректно работать как с маршрутизацией на стороне клиента, так и с общедоступным
+        URL-адресом без полномочий root.
+        Узнайте, как настроить общедоступный URL-адрес без полномочий root, запустив `npm run build`.
     -->
-  </body>
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
+      Этот файл HTML является шаблоном.
+       Если вы откроете его прямо в браузере, то увидите пустую страницу.
+
+       Вы можете добавить в этот файл веб-шрифты, метатеги или аналитику.
+       На этапе сборки связанные скрипты будут помещены в тег <body>.
+
+       Чтобы начать разработку, запустите `npm start` или `yarn start`.
+       Чтобы создать рабочий пакет, используйте «npm run build» или «yarn build».
+    -->
+</body>
+
 </html>
